fix: registration mobile view

--- a/client/src/pages/RegistrationPage/ButtonSelect.module.css
+++ b/client/src/pages/RegistrationPage/ButtonSelect.module.css
@@ -5,7 +5,7 @@
     .dryLabel {
         font-size: 13px;
         text-align: center;
-        padding: 10px 51px;
+        padding: 10px 45px;
         align-self: center;
         border-radius: 5px;
         border: solid 1px #96807A;
@@ -18,12 +18,12 @@
     }
 
     .normalLabel {
-        padding: 10px 41px;
+        padding: 10px 34px;
         font-size: 13px;
         border-radius: 5px;
         text-align: center;
         align-self: center;
-        margin-left: -35px;
+        margin-left: -29px;
         border: solid 1px #96807A;
         background-color: #F7EDE1;
     }
@@ -34,12 +34,12 @@
     }
 
     .oilyLabel {
-        padding: 10px 52px;
+        padding: 10px 46px;
         font-size: 13px;
         border-radius: 5px;
         text-align: center;
         align-self: center;
-        margin-left: -101px;
+        margin-left: -89px;
         border: solid 1px #96807A;
         background-color: #F7EDE1;
     }
@@ -50,7 +50,7 @@
     }
 
     .combinationLabel {
-        padding: 10px 24px;
+        padding: 10px 18px;
         font-size: 13px;
         text-align: left;
         align-self: center;
@@ -66,8 +66,8 @@
 
     .sensitiveLabel {
         align-self: center;
-        padding: 10px 36px;
-        margin-left: -35px;
+        padding: 10px 29px;
+        margin-left: -29px;
         font-size: 13px;
         text-align: center;
         border-radius: 5px;
@@ -81,7 +81,7 @@
     }
 
     .acneLabel {
-        padding: 10px 48px;
+        padding: 10px 40px;
         font-size: 13px;
         border-radius: 5px;
         text-align: center;
@@ -96,9 +96,9 @@
     }
 
     .drynessLabel  {
-        padding: 10px 38px;
+        padding: 10px 33px;
         font-size: 13px;
-        margin-left: -32px;
+        margin-left: -32.5px;
         border-radius: 5px;
         align-self: center;
         text-align: center;
@@ -112,9 +112,9 @@
     }
 
     .oilynessLabel  {
-        padding: 10px 39px;
+        padding: 10px 35px;
         font-size: 13px;
-        margin-left: -100px;
+        margin-left: -93px;
         border-radius: 5px;
         align-self: center;
         text-align: center;
@@ -128,7 +128,7 @@
     }
 
     .blemishesLabel {
-        padding: 10px 32px;
+        padding: 10px 25px;
         font-size: 13px; 
         align-self: center;
         text-align: center;
@@ -143,11 +143,11 @@
     }
 
     .darkspotsLabel {
-        padding: 10px 33px;
+        padding: 10px 27px;
         font-size: 12px;
         align-self: center;
         text-align: center;
-        margin-left: -32px;
+        margin-left: -32.5px;
         border-radius: 5px;
         border: solid 1px #96807A;
         background-color: #F7EDE1;
@@ -159,12 +159,12 @@
     }
 
     .poresLabel {
-        padding: 10px 45px;
+        padding: 10px 41px;
         font-size: 13px;
         border-radius: 5px;
         align-self: center;
         text-align: center;
-        margin-left: -100px;
+        margin-left: -93px;
         border: solid 1px #96807A;
         background-color: #F7EDE1;
     }
@@ -175,7 +175,7 @@
     }
 
     .redlinesLabel {
-        padding: 10px 36px;
+        padding: 10px 29px;
         font-size: 13px;
         align-self: start;
         text-align: center;
@@ -190,9 +190,9 @@
     }
 
     .finelinesLabel {
-        padding: 10px 34.5px;
+        padding: 10px 29px;
         font-size: 13px;
-        margin-left: -32px;
+        margin-left: -32.5px;
         align-self: start;
         text-align: center;
         border-radius: 5px;
