--- a/client/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/client/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -3,7 +3,7 @@
         grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         height: 1000px;
-        width: 420px;
+        width: 380px;
         margin: 15px auto;
         padding: 20px 26px;
         padding-left: 45px;
@@ -27,7 +27,7 @@
     .fullnameInput {
         grid-column: 1 / 7;
         grid-row: 3 / 4;
-        width :390px;
+        width :360px;
         height: 40px;
         margin: 1% 0;
         border-radius: 5px;
@@ -47,7 +47,7 @@
     .emailInput {
         grid-column: 1 / 7;
         grid-row: 5 / 6;
-        width :390px;
+        width :360px;
         height: 40px;
         margin: 1% 0;
         border-radius: 5px;
@@ -67,7 +67,7 @@
     .passwordInput {
         grid-column: 1 / 7;
         grid-row: 7 / 8;
-        width :390px;
+        width :360px;
         height: 40px;
         margin: 1% 0;
         border-radius: 5px;
@@ -86,7 +86,7 @@
     
     .passwordCfmInput {
         grid-column: 1 / 7;
-        width :390px;
+        width :360px;
         height: 40px;
         margin: 1% 0;
         grid-row: 9 / 10;
@@ -107,7 +107,7 @@
     .locationInput {
         grid-column: 1 / 4;
         grid-row: 11 / 12;
-        width: 180px;
+        width: 170px;
         height: 40px;
         margin: 5px 0;
         border-radius: 5px;
@@ -122,7 +122,7 @@
         flex-direction: column;
         font-size: 16px;
         text-align: left;
-        margin-left: -65px;
+        margin-left: -60px;
         font-weight: 400;
         align-self: center;
     }
@@ -130,10 +130,10 @@
     .genderInput {
         grid-column: 4 / 7;
         grid-row: 11 / 12;
-        width: 193px;
+        width: 179px;
         height: 45px;
         margin-top: 4px;
-        margin-left: -65px;
+        margin-left: -60px;
         border-radius: 5px;
         background-color: #F7EDE1;
     }
@@ -146,6 +146,12 @@
         height: 1vh;
         margin: 8% 0;
         text-align: left;
+    }
+
+    .errorMessage {
+        margin-left: 24px;
+        grid-column: 3 / 7;
+        grid-row: 13 / 14;
     }
     
     .Checkbox {
@@ -228,13 +234,13 @@
     }
     
     .redlinesLabel {
-        margin-top: 29px;
+        margin-top: 30px;
         grid-column: 1 / 3;
         grid-row: 20 / 21;
     }
     
     .finelinesLabel {
-        margin-top: 29px;
+        margin-top: 30px;
         grid-column: 3 / 5;
         grid-row: 20 / 21;
     }
@@ -243,7 +249,7 @@
         grid-column: 2 / 6;
         grid-row: 22 / 23;
         height: 48px;
-        width: 400px;
+        width: 370px;
         justify-self: center;
         margin: 8% 0;
         margin-left: -35%;
@@ -395,6 +401,7 @@
 
     .errorMessage {
         margin-top: 5px;
+        margin-left: 0;
         grid-column: 2 / 4;
         grid-row: 12 / 13;
     }
